<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#002F6C"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="405dp"
        android:layout_height="423dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <TextView
            android:layout_width="205dp"
            android:layout_height="81dp"
            android:text="@string/bienvenu"
            android:textColor="#E6FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="221dp"
            android:layout_height="47dp"
            android:text="@string/connectez_vous_pour_continuer"
            android:textColor="#85FFFFFF"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/saisie_back"
            android:hint="@string/email_ou_numero"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/saisie_back"
            android:hint="@string/mot_de_passe"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/boutonconexion"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="#01579b"
            android:text="@string/connexion"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="8sp" />

        <TextView
            android:id="@+id/nouveau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:text="@string/cr_e_un_nouveau_compte"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>